--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "scripts": {
     "start": "webpack serve --open",
     "build": "webpack"
+  },
+  "devDependencies": {
+    "eslint": "^7.22.0"
   }
 }
