--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "eslint-plugin-promise": "^4.3.1",
     "eslint-plugin-react": "^7.23.1",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-standard": "^5.0.0",
     "html-webpack-plugin": "^5.3.1",
+    "husky": "^5.2.0",
+    "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
     "webpack": "^5.28.0",
     "webpack-cli": "^4.5.0",
@@ -35,5 +38,38 @@
     "build": "webpack",
     "lint": "eslint ./src",
     "format": "prettier --write 'src/*.{js,jsx,ts,tsx,css,html}'"
+  },
+  "eslintConfig": {
+    "extends": [
+      "plugin:react/recommended",
+      "plugin:prettier/recommended",
+      "semistandard"
+    ],
+    "settings": {
+      "react": {
+        "version": "detect"
+      }
+    },
+    "parserOptions": {
+      "ecmaFeatures": {
+        "jsx": true
+      },
+      "ecmaVersion": 12,
+      "sourceType": "module"
+    },
+    "plugins": ["react"]
+  },
+  "prettier": {
+    "printWidth": 90,
+    "bracketSpacing": true,
+    "trailingComma": "none",
+    "arrowParens": "always",
+    "singleQuote": true,
+    "jsxSingleQuote": true
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn run lint && yarn run format"
+    } 
   }
 }
