Updated the 'Format' command to cover all subdirectories in the src folder rather than just the root level. Changed the order in which ESLint styles were being applied in order to fix conflict between ESLint and Semistandard style guide.

--- a/package.json
+++ b/package.json
@@ -37,13 +37,13 @@
     "start": "webpack serve --open",
     "build": "webpack",
     "lint": "eslint ./src",
-    "format": "prettier --write 'src/*.{js,jsx,ts,tsx,css,html}'"
+    "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx,css,html}'"
   },
   "eslintConfig": {
     "extends": [
+      "semistandard",
       "plugin:react/recommended",
-      "plugin:prettier/recommended",
-      "semistandard"
+      "plugin:prettier/recommended"
     ],
     "settings": {
       "react": {
